fail_crate/tests/unexpected_after_pub_in.rs
use inew::New;

#[derive(New)]
#[new(pub(in crate =))]
struct A;

fn main() {}
